# visual-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: documents.py  ingest.py  search.py
app/core/: config.py  milvus_client.py  model_loader.py
app/models/: document.py
app/services/: document_service.py  embedding_service.py  generation_service.py  ingestion_service.py  milvus_service.py  pdf_processor.py  retrieval_service.py  search_service.py
app/utils/: document_utils.py  image_utils.py
backlog/: config.yml
backlog/scripts/: check_embeddings.py  test_search_scores.py
backlog/tasks/: task-001 - Plan-for-Visual-RAG-Proof-of-Concept.md  task-002 - Foundation-Setup.md  task-003 - PDF-Processing-Service.md  task-004 - ColQwen2-Embedding-Service.md  task-005 - Milvus-Storage-Service.md  task-006 - Ingestion-API-Endpoint.md  task-006 - Ingestion-CLI-Script.md  task-007 - MaxSim-Retrieval-Service.md  task-008 - Search-API-Endpoint.md  task-008 - Search-CLI-Script.md  task-009 - VLM-Generation-Service.md  task-010 - Generation-CLI-Script.md  task-011 - FastAPI-Backend.md  task-012 - Docker-Deployment.md  task-013 - Integration-Testing.md  task-014 - Delete-Document-API.md  task-015 - Add-Attu-to-Docker-Compose.md  task-015 - Attu-Docker-Compose.md  task-016 - Document-Retrieval-API.md  task-017 - Azure-AI-Search-Comparison.md  task-018 - Image-Based-Search.md  (+4 more)
src/: app.py
src/api/: ingest.py  (+1 more)
tests/: test_generation_service.py  test_milvus_setup.py
(+30 files in other folders)
